# android-parser

./: Dockerfile  MANIFEST.in  README.md  default_tunings.json  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt  setup.cfg  setup.py
android_parser/: __init__.py  __main__.py  android_manifest_parser.py  main.py
android_parser/components/: activity.py  android_classes.py  application.py  filesystem.py  hardware.py  intent_filter.py  manifest.py  provider.py  receiver.py  service.py
android_parser/utilities/: attacker.py  constants.py  log.py  malicious_application.py  view_generation.py  xml.py
tools/git-hooks/: install.sh
tools/git-hooks/pre-commit.d/: format-json.sh  format-python.sh
tools/scripts/: create_langpack.sh  create_package.sh  create_requirements.sh  create_venv.sh  run_mypy.sh  run_pylint.sh
