[metadata]
name = android-parser
version = attr: android_parser.__version__
author = Andreas Gylling
author_email = andreas.gylling@foreseeti.com
description = This is an androidLang parser project compatible with securiCAD Enterprise and the modelCreationSDK.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foreseeti/

[options]
python_requires = >=3.8
packages =
  android_parser

[mypy]
python_version = 3.8

[enterprise_suite]
display_name = Android parser

[enterprise_suite.sub_parsers]
android-manifest-parser = azure_parser.android_manifest_parser

[options.package_data]
azure_parser = 
    utilities/*
    *.mar